# paper

./: CMakeLists.txt  README.md  packages.config
data/: Hubei_age_distribution.csv  Sichuan_age_distribution.csv
model/include/: Config.h  IOUtils.h  Migration.h  Population.h  RandomUtils.h  SEIRModel.h  Transition.h
model/src/: Config.cpp  IOUtils.cpp  Migration.cpp  Population.cpp  RandomUtils.cpp  SEIRModel.cpp  Transition.cpp  main.cpp  seir.cpp
